# Books

./: .gitignore  .pdm.toml  Cargo.toml  README.md  Untitled.ipynb  import pandas as pd  pyproject.toml  requirements.txt
functions/: learning_rate.py  learning_rate_functions.py  plots.py
hands-on-ml/notebooks/: chapter_13_loading_and_preprocessing_data_with_tensorflow.ipynb  chapter_15_processing_sequences_using_rnns_and_cnns.ipynb
hands_on_machine_learning/models/: model_fashion.h5  multi_output_layers_model.h5
hands_on_machine_learning/notebooks/: chapter_10_introduction_to_artificial_neural_networks_with_keras.ipynb  chapter_16_natural_language_processing_with_rnns_and_attention.ipynb  chapter_17_representation_learning_and_generative_learning_using_autoencoders_and_gan.ipynb  chapter_18_reinforcement_learning.ipynb  chapter_3_classification.ipynb  chapter_4_training_models.ipynb  chapter_5_support_vector_machines.ipynb  chapter_6_decision_trees.ipynb
heart_csv dataset/: Hearts Dataset.ipynb
homl/: README.md
homl/notebooks/: chapter_11_training_deep_neural_networks.ipynb  chapter_12_custom_models_and_training_with_tensorflow.ipynb  chapter_14_deep_computer_vision_using_computational_neural_networks.ipynb  chapter_17_representation_learning_and_generative_learning_using_autoencoders_and_gan.ipynb  chapter_2_end_to_end_machine_learning_project.ipynb  chapter_7_ensemble_learning_and_random_forests.ipynb  chapter_8_dimensionality_reduction.ipynb  chapter_9_unsupervised_learning_techniques.ipynb
learning_algorithms/: chapter_2 Analyzing Algorithms.ipynb
nlp-transformers/notebooks/: 1.hello_transformers.ipynb  2.text_classification.ipynb  4.multilingual_named_entity_recognition.ipynb
nlp-transformers/projects/: 4.token_classification_ner.ipynb  test.ipynb
practical-ml-vision/: LICENSE
practical-ml-vision/docs/: index.rst
practical_ml_for_computer_vision/: LICENSE  README.md
practical_ml_for_computer_vision/docs/: Makefile  conf.py  make.bat
practical_ml_for_computer_vision/flowers_classifier/: saved_model.pb  (+1 more)
python_data_analysis/: LICENSE  README.md
tensorboard/: embedding_projector.ipynb  getting_started.ipynb  hyperparameter_tuning.ipynb  image_data.ipynb  model_graphs.ipynb  profiling_tool.ipynb  scalars_and_metrics.ipynb  tensorboard_data_as_dataframes.ipynb  tensorboard_in_notebooks.ipynb  text_data.ipynb
tensorflow/: tensorboard.ipynb
(+580 files in other folders)
