[tool.poetry]
name = "books"
version = "1.4"
description = ""
authors = ["Marlon Menendez <marlon.menendezg@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
tensorflow-macos = "^2.12.0"
tensorflow-metal = "^0.8.0"
tensorflow-hub = "^0.13.0"
tensorflow-datasets = "^4.9.1"
tensorboard-plugin-profile = "^2.11.2"
pandas = "^2.0.0"
polars = "^0.17.2"
seaborn = "^0.12.2"
black = "^23.3.0"
flake8 = "^6.0.0"
jupyterlab = "^3.6.3"
transformers = "^4.27.4"
tokenizers = "^0.13.3"
pylint = "^2.17.3"
tensorflow-addons = "^0.20.0"
tensorflow-text = {path = "wheels/tensorflow_text-2.12.1-cp310-cp310-macosx_11_0_arm64.whl"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
