[tool.poetry]
name = "books"
version = "1.4"
description = ""
authors = ["Marlon Menendez <marlon.menendezg@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
tensorflow-macos = "^2.13.0"
tensorflow-metal = "^1.0.1"
flake8 = "^6.0.0"
black = "^23.7.0"
matplotlib = "^3.7.2"
pandas = "^2.0.3"
polars = "^0.18.9"
seaborn = "^0.12.2"
transformers = "^4.31.0"
datasets = "^2.14.1"
evaluate = "^0.4.0"
jupyterlab = "^4.0.3"
pylance = "^0.5.10"
ipykernel = "^6.25.0"
tensorflow-hub = "^0.14.0"
tensorflow-datasets = "^4.9.2"
tensorboard-plugin-profile = "^2.13.1"
pylint = "^2.17.5"
tokenizers = "^0.13.3"
tensorboard = "^2.13.0"
tensorflow-addons = "^0.21.0"
sentencepiece = "^0.1.99"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
